Update memo schema
